style(Header): setting up header

--- a/app/globals.css
+++ b/app/globals.css
@@ -45,20 +45,28 @@
 
 :root {
   --radius: 0.625rem;
+
+  /* Palette custom */
+  /* --color-yellow: oklch(0.926 0.196 102.41);
+  --color-blue: oklch(0.561 0.236 248.09); */
+  --color-yellow: oklch(0.902 0.138 100.17);
+  --color-blue: oklch(0.755 0.145 249.45);
+  --color-white: oklch(1 0 0);
+
   --background: oklch(1 0 0);
-  --foreground: oklch(0.145 0 0);
+  --foreground: var(--color-white);
   --card: oklch(1 0 0);
-  --card-foreground: oklch(0.145 0 0);
+  --card-foreground: var(--color-blue);
   --popover: oklch(1 0 0);
-  --popover-foreground: oklch(0.145 0 0);
-  --primary: oklch(0.205 0 0);
-  --primary-foreground: oklch(0.985 0 0);
-  --secondary: oklch(0.97 0 0);
-  --secondary-foreground: oklch(0.205 0 0);
+  --popover-foreground: var(--color-blue);
+  --primary: var(--color-blue);
+  --primary-foreground: var(--color-white);
+  --secondary: var(--color-yellow);
+  --secondary-foreground: var(--color-blue);
   --muted: oklch(0.97 0 0);
   --muted-foreground: oklch(0.556 0 0);
-  --accent: oklch(0.97 0 0);
-  --accent-foreground: oklch(0.205 0 0);
+  --accent: var(--color-yellow);
+  --accent-foreground: var(--color-blue);
   --destructive: oklch(0.577 0.245 27.325);
   --border: oklch(0.922 0 0);
   --input: oklch(0.922 0 0);
@@ -69,30 +77,34 @@
   --chart-4: oklch(0.828 0.189 84.429);
   --chart-5: oklch(0.769 0.188 70.08);
   --sidebar: oklch(0.985 0 0);
-  --sidebar-foreground: oklch(0.145 0 0);
-  --sidebar-primary: oklch(0.205 0 0);
-  --sidebar-primary-foreground: oklch(0.985 0 0);
-  --sidebar-accent: oklch(0.97 0 0);
-  --sidebar-accent-foreground: oklch(0.205 0 0);
+  --sidebar-foreground: var(--color-blue);
+  --sidebar-primary: var(--color-blue);
+  --sidebar-primary-foreground: var(--color-white);
+  --sidebar-accent: var(--color-yellow);
+  --sidebar-accent-foreground: var(--color-blue);
   --sidebar-border: oklch(0.922 0 0);
   --sidebar-ring: oklch(0.708 0 0);
 }
 
 .dark {
+  --color-yellow: oklch(0.926 0.196 102.41);
+  --color-blue: oklch(0.561 0.236 248.09);
+  --color-white: oklch(1 0 0);
+
   --background: oklch(0.145 0 0);
-  --foreground: oklch(0.985 0 0);
+  --foreground: var(--color-white);
   --card: oklch(0.205 0 0);
-  --card-foreground: oklch(0.985 0 0);
+  --card-foreground: var(--color-white);
   --popover: oklch(0.205 0 0);
-  --popover-foreground: oklch(0.985 0 0);
-  --primary: oklch(0.922 0 0);
-  --primary-foreground: oklch(0.205 0 0);
-  --secondary: oklch(0.269 0 0);
-  --secondary-foreground: oklch(0.985 0 0);
+  --popover-foreground: var(--color-white);
+  --primary: var(--color-blue);
+  --primary-foreground: var(--color-white);
+  --secondary: var(--color-yellow);
+  --secondary-foreground: var(--color-blue);
   --muted: oklch(0.269 0 0);
   --muted-foreground: oklch(0.708 0 0);
-  --accent: oklch(0.269 0 0);
-  --accent-foreground: oklch(0.985 0 0);
+  --accent: var(--color-yellow);
+  --accent-foreground: var(--color-white);
   --destructive: oklch(0.704 0.191 22.216);
   --border: oklch(1 0 0 / 10%);
   --input: oklch(1 0 0 / 15%);
@@ -103,11 +115,11 @@
   --chart-4: oklch(0.627 0.265 303.9);
   --chart-5: oklch(0.645 0.246 16.439);
   --sidebar: oklch(0.205 0 0);
-  --sidebar-foreground: oklch(0.985 0 0);
-  --sidebar-primary: oklch(0.488 0.243 264.376);
-  --sidebar-primary-foreground: oklch(0.985 0 0);
-  --sidebar-accent: oklch(0.269 0 0);
-  --sidebar-accent-foreground: oklch(0.985 0 0);
+  --sidebar-foreground: var(--color-white);
+  --sidebar-primary: var(--color-blue);
+  --sidebar-primary-foreground: var(--color-white);
+  --sidebar-accent: var(--color-yellow);
+  --sidebar-accent-foreground: var(--color-blue);
   --sidebar-border: oklch(1 0 0 / 10%);
   --sidebar-ring: oklch(0.556 0 0);
 }
@@ -116,7 +128,26 @@
   * {
     @apply border-border outline-ring/50;
   }
+
   body {
-    @apply bg-background text-foreground;
+    @apply bg-[var(--background)] text-[var(--foreground)];
+  }
+
+  /* button {
+    background-color: var(--primary);
+    color: var(--foreground);
+  }
+
+  button:hover {
+    background-color: var(--secondary);
+  } */
+
+  header {
+    background-color: var(--primary);
+  }
+
+  footer {
+    background-color: var(--muted);
+    color: var(--foreground);
   }
 }
